desenvolvimento da interacao com banco de dados

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,8 +4,8 @@ by = Guilherme Mello - guilhermesamello@gmail.com - Dev RPA
 
 [INFO] ; Informações de identificação do processo
 env = PROD
-empresa = NOME_EMPRESA
-nome_processo = RPA_EMPRESA_NOME_PROCESSO
+empresa = SOUFER
+nome_processo = RPA_SOUFER_RETORNO_EXTRATO_V2
 
 [PATH] ; Inserir diretórios que devem ser fixos no código
 
